# file_manager

./: README.md
FileManager/: CMakeLists.txt  archive.cpp  cmdline.cpp  customMenu.cpp  dirOperations.cpp  fileOperations.cpp  keyboard.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  multipleOperations.cpp  translation.ts  translation_ukr.ts  ukrt.ts
FileManager/qua/__MACOSX/quazip/1.4/lib/: ._pkgconfig
FileManager/qua/quazip/1.4/: INSTALL_RECEIPT.json  sbom.spdx.json
FileManager/qua/quazip/1.4/.brew/: quazip.rb
FileManager/qua/quazip/1.4/include/: quazip
FileManager/qua/quazip/1.4/lib/: libquazip1-qt6.1.4.dylib
FileManager/qua/quazip/1.4/lib/cmake/QuaZip-Qt6-1.4/: QuaZip-Qt6_SharedTargets-release.cmake  QuaZip-Qt6_SharedTargets.cmake
FileManager/qua/quazip/1.4/lib/pkgconfig/: quazip1-qt6.pc
ord/: main.cpp  mainwindow.cpp  mainwindow.h
